--- a/sca-best-practice/sca-hanlp/pom.xml
+++ b/sca-best-practice/sca-hanlp/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>sca-hanlp</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>8</java.version>
+    </properties>
+
     <dependencies>
 
         <dependency>
