--- a/sca-best-practice/sca-acgnfuns/pom.xml
+++ b/sca-best-practice/sca-acgnfuns/pom.xml
@@ -144,6 +144,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
